Revert "Update odroidc2.conf"

--- a/conf/machine/odroidc2.conf
+++ b/conf/machine/odroidc2.conf
@@ -12,7 +12,7 @@ DVBPROVIDER = "kernel"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
     hardkernel-mali-${MACHINE} \
-    ${@bb.utils.contains('GST_VERSION', '1.0', 'gst-amlavsink ', 'gst-amlavsink gst-amlavout  gst-ffmpeg gst-fluendo-mpegdemux ', d)} \
+    ${@bb.utils.contains('GST_VERSION', '1.0', 'gst-amlavsink1 ', 'gst-amlavsink gst-amlavout  gst-ffmpeg gst-fluendo-mpegdemux ', d)} \
     \
      \
     opengl-amlogic \
