Support MINIX X8HP and some cleanups

--- a/conf/machine/odroidc2.conf
+++ b/conf/machine/odroidc2.conf
@@ -6,6 +6,7 @@ GST_VERSION = "0.10"
 
 # Amlogic defaults
 require conf/machine/include/amlogic.inc
+IMAGE_CLASSES += "image_types_odroid"
 require conf/machine/include/arm/arch-armv8.inc
 
 DVBPROVIDER = "kernel"
