--- a/conf/machine/x8hp.conf
+++ b/conf/machine/x8hp.conf
@@ -1,20 +1,17 @@
 #@TYPE: Machine
-#@NAME: WeTeK Play 2
-#@DESCRIPTION: Machine configuration for WeTeK Play 2
+#@NAME: MINIX NEO X8-H Plus
+#@DESCRIPTION: Machine configuration for MINIX NEO X8-H Plus
 
 GST_VERSION = "0.10"
 
 SOC_FAMILY = "aml8726"
 
 # Amlogic defaults
-require conf/machine/include/wetek-amlogic.inc
-require conf/machine/include/arm/arch-armv8.inc
-require conf/machine/include/soc-family.inc
+require conf/machine/include/amlogic.inc
+
+IMAGE_CLASSES += "image_types_minix"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
-    wetek-dvb-modules-${MACHINE} \
-    wetek-dhd-${MACHINE} \
-    wetek-mali-${MACHINE} \
     gst-amlavsink \
     gst-app \
     gst-amlavout \
@@ -26,21 +23,19 @@ DVBPROVIDER = "kernel"
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
     kernel-module-cdfs \
+    kernel-module-stb-procfs \
+    kernel-module-stb-nimsockets \
     kernel-module-sysfillrect \
     kernel-module-syscopyarea \
     kernel-module-mceusb \
     kernel-module-rc-core \
+    kernel-module-mali \
+    kernel-module-dhd \
     kernel-module-CH341 \
-    kernel-module-cfg80211 \
-    kernel-module-rfcomm \
-    kernel-module-hidp \
-    kernel-module-bluetooth \
-    kernel-module-6lowpan-iphc \
-    kernel-module-libcrc32c \
-    kernel-module-xfs \
+    kernel-module-aml_pmu_dev \
     amlsetfb \
     amremote \
-    pcsc-lite \
+    firmware-ap6330 \
     "
 
 MACHINE_EXTRA_RRECOMMENDS = " \
@@ -53,7 +48,8 @@ MACHINE_EXTRA_RRECOMMENDS = " \
 include conf/machine/include/autoload-filesystems.inc
 
 KERNEL_MODULE_AUTOLOAD += "\
-    e2-procfs \
+    stb-procfs \
+    stb-nimsockets \
     sysfillrect \
     syscopyarea \
     mceusb \
@@ -63,17 +59,14 @@ KERNEL_MODULE_AUTOLOAD += "\
     CH341 \
     rfcomm \
     hidp \
-    cfg80211 \
-    bluetooth \
-    6lowpan-iphc \
-    libcrc32c \
-    xfs \
+    aml_pmu_dev \
 "
-module_conf_dhd = "options dhd firmware_path=/lib/firmware/brcm/ nvram_path=/lib/firmware/brcm/"
 
-KERNEL_MODULE_PROBECONF += "\
-	dhd \
-"
+# Uncomment the following line to enable the hard floating point abi. Note that
+# this breaks some binary libraries and 3D (neither of which ship with
+# meta-yocto). For maximum compatibility, leave this disabled.
+DEFAULTTUNE ?= "cortexa9hf-neon"
+include conf/machine/include/tune-cortexa9.inc
 
 IMAGE_FSTYPES += "ext4 sdcard"
 IMAGE_ROOTFS_SIZE = "976562"
@@ -83,11 +76,18 @@ IMAGE_OVERHEAD_FACTOR = "1.0"
 # Serial console to be used
 SERIAL_CONSOLE = "115200 ttyS0"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-wetek2"
-PREFERRED_VERSION_linux-wetek2 = "3.14.29"
+PREFERRED_PROVIDER_virtual/kernel = "linux-minix"
+PREFERRED_VERSION_linux-wetek = "3.10.93"
 
-KERNEL_IMAGETYPE = "Image"
-KERNEL_DEVICETREE = "gxbb_p200_2G_wetek_play_2.dtb"
+KERNEL_IMAGETYPE = "uImage"
+KERNEL_DEVICETREE = "meson8m2_n200_2G.dtd meson8m2_n200_2G.dtb"
+
+#specify u-boot parameters
+PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-hardkernel"
+PREFERRED_PROVIDER_u-boot ?= "u-boot-hardkernel"
+PREFERRED_VERSION_u-boot-hardkernel ?= "2015.01"
+
+UBOOT_MACHINE_odroidc2 = "odroidc2_defconfig"
 
 UBOOT_ENTRYPOINT  = "0x80008000"
 UBOOT_LOADADDRESS = "0x80008000"
@@ -96,7 +96,7 @@ IMAGEDIR ?= "${MACHINE}"
 
 IMAGE_CMD_sdcard_append = " \
     mkdir -p ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}; \
-    mv ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.wetek-sd.img ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}/${IMAGE_NAME}.sdcard.img; \
+    mv ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.minix-sd.img ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}/${IMAGE_NAME}.sdcard.img; \
     echo ${IMAGE_VER_STRING} > ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}/imageversion; \
     cd ${DEPLOY_DIR_IMAGE}; \
     zip ${IMAGE_NAME}_sdcard.zip ${IMAGEDIR}/*; \
@@ -104,10 +104,12 @@ IMAGE_CMD_sdcard_append = " \
     rm -f ${DEPLOY_DIR_IMAGE}/*.manifest; \
     rm -f ${DEPLOY_DIR_IMAGE}/.ext4; \
     rm -f ${DEPLOY_DIR_IMAGE}/.manifest; \
-    rm -f ${DEPLOY_DIR_IMAGE}/.wetek-sd.img; \
-    rm -f ${DEPLOY_DIR_IMAGE}/*.rootfs.wetek-sd.img; \
+    rm -f ${DEPLOY_DIR_IMAGE}/.minix-sd.img; \
+    rm -f ${DEPLOY_DIR_IMAGE}/*.rootfs.minix-sd.img; \
     rm -Rf ${IMAGEDIR}; \
     "
+
+MACHINE_FEATURES = "wlan bluetooth fb meson8 usbhost vfat alsa dvb-c legacykernel nolcd"
 
 # We know about rtc
 include conf/machine/include/build-extras.inc
