--- a/recipes-bsp/drivers/files/boot.ini
+++ b/recipes-bsp/drivers/files/boot.ini
@@ -1,139 +1,74 @@
-#------------------------------------------------------------------------------------------------------
-#
-# Boot.ini text file template
-#
-#------------------------------------------------------------------------------------------------------
-#
-# boot.ini identification
-#
-#------------------------------------------------------------------------------------------------------
-ODROIDXU-UBOOT-CONFIG
+ODROIDC-UBOOT-CONFIG
 
-# Verify if u-boot is up-to-date to receive new Kernel
-setenv hk_current_version "2"
-setenv verify 'if test $hk_version != $hk_current_version;then;fatload mmc 0:1 40008000 u-boot.bin;emmc open 0;movi w z u 0 40008000;emmc close 0;setenv hk_version $hk_current_version;save;reset;fi'
-# run verify
+# Possible screen resolutions
+# Uncomment only a single Line! The line with setenv written.
+# At least one mode must be selected.
 
-# U-Boot Parameters
-setenv initrd_high "0xffffffff"
-setenv fdt_high "0xffffffff"
+# setenv m "vga"            # 640x480
+# setenv m "480p"           # 720x480
+# setenv m "576p"           # 720x576
+# setenv m "800x480p60hz"   # 800x480
+# setenv m "800x600p60hz"   # 800x600
+# setenv m "1024x600p60hz"  # 1024x600
+# setenv m "1024x768p60hz"  # 1024x768
+# setenv m "1360x768p60hz"  # 1360x768
+# setenv m "1366x768p60hz"  # 1366x768
+# setenv m "1440x900p60hz"  # 1440x900
+# setenv m "1600x900p60hz"  # 1600x900
+# setenv m "1680x1050p60hz" # 1680x1050
+# setenv m "720p"           # 720p 1280x720
+# setenv m "800p"           # 1280x800
+# setenv m "sxga"           # 1280x1024
+# setenv m "1080i50hz"      # 1080I@50Hz
+# setenv m "1080p24hz"      # 1080P@24Hz
+# setenv m "1080p50hz"      # 1080P@50Hz
+setenv m "1080p"            # 1080P@60Hz
+# setenv m "1920x1200"      # 1920x1200
 
-#------------------------------------------------------------------------------------------------------
-#
-# Boot Specific Stuff
-# Ubuntu
-#setenv bootrootfs "console=tty1 console=ttySAC2,115200n8 root=UUID=e139ce78-9841-40fe-8823-96a304a09859 rootwait ro"
-# yocto
-setenv bootrootfs "console=tty1 console=ttySAC2,115200n8 root=/dev/mmcblk0p2 rw rootfstype=ext4 rw"
+# HDMI DVI Mode Configuration
+setenv vout_mode "hdmi"
+# setenv vout_mode "dvi"
 
-# Android
-# setenv bootroofs "root=/dev/mmcblk0p2 rw rootfstype=ext4 init=/init console=ttySAC2,115200n8 vmalloc=512M"                                              
+# HDMI BPP Mode
+setenv m_bpp "32"
+# setenv m_bpp "24"
+# setenv m_bpp "16"
 
-#------------------------------------------------------------------------------------------------------
-#
-# Frame buffer size.
-# Example.. If you are on LCD Kit set the values bellow to:
-# x = 1280 and y = 800
-# Otherwise please set this value below to your wanted resolution
-# Values:
-# LCD Kit: x = 1280   y = 800
-#  ---------------------------
-# HDMI:
-#    480: x = 720    y = 480
-#    576: x = 720    y = 576
-#    720: x = 1280   y = 720
-#   1080: x = 1920   y = 1080
-#
-#------------------------------------------------------------------------------------------------------
-setenv fb_x_res     "1920"
-setenv fb_y_res     "1080"
+# HDMI Hotplug Force (HPD)
+# 1 = Enables HOTPlug Detection
+# 0 = Disables HOTPlug Detection and force the connected status
+setenv hpd "0"
 
-#------------------------------------------------------------------------------------------------------
-#
-# Controls the Board Output Method.
-# Valid values are: lcd dp hdmi dvi
-#
-#------------------------------------------------------------------------------------------------------
-setenv vout         "hdmi"
+# CEC Enable/Disable (Requires Hardware Modification)
+# 1 = Enables HDMI CEC
+# 0 = Disables HDMI CEC
+setenv cec "0"
 
-#------------------------------------------------------------------------------------------------------
-#
-# FB Control
-#
-#------------------------------------------------------------------------------------------------------
-setenv left     "10"
-setenv right    "10"
-setenv upper    "10"
-setenv lower    "10"
-setenv hsync    "10"
-setenv vsync    "10"
+# UHS Card Configuration
+# Uncomment the line below to __DISABLE__ UHS-1 MicroSD support
+# This might break boot for some brand models of cards.
+setenv disableuhs "disableuhs"
 
-setenv fb_control "left=${left} right=${right} upper=${upper} lower=${lower} vsync=${vsync} hsync=${hsync}"
+# Disable VPU (Video decoding engine, Saves RAM!!!)
+# 0 = disabled
+# 1 = enabled
+setenv vpu "1"
 
-#------------------------------------------------------------------------------------------------------
-#
-# 테스트 되어진 모니터의 parameter값입니다. 위 값을 설정할 때 참고하여 사용합니다.
-#
-#------------------------------------------------------------------------------------------------------
-#
-# AOC I2269V 22" (1920 X 1080)
-# left = 56, right = 24, upper = 3, lower = 3, hsync = 14, vsync = 3
-#
-#------------------------------------------------------------------------------------------------------
-#
-# YAMAKASI Monitor 27" (2560 X 1440)
-# left = 15, right = 10, upper = 10, lower = 10, hsync = 10, vsync = 10,
-#
-#------------------------------------------------------------------------------------------------------
-#
-# X-Star Monitor 27" (2560 X 1440)
-# left = 56, right = 24, upper = 3, lower = 3, hsync = 14, vsync = 3,
-#
-#------------------------------------------------------------------------------------------------------
-#
-# LG Monitor 27" (2560 * 1080)
-#
-# left = 56, right = 248, upper = 3, lower = 3, hsync = 144, vsync = 3,
-# left = 100, right = 100, upper = 100, lower = 100, hsync = 100, vsync = 100,
-#
-#------------------------------------------------------------------------------------------------------
+# Disable HDMI Output (Again, saves ram!)
+# 0 = disabled
+# 1 = enabled
+setenv hdmioutput "1"
 
-#------------------------------------------------------------------------------------------------------
-#
-# Forces a fixed resolution on the HDMI controller. Please make sure that your screen supports and
-# It matchs the resolution above! setted the X and Y
-# valid values are: 480p60hz 720p60hz 720p50hz 1080p60hz 1080i60hz 1080i50hz 1080p50hz
-#		    1080p30hz 1080p25hz 1080p24hz
-#
-#------------------------------------------------------------------------------------------------------
-setenv hdmi_phy_res "1080p60hz"
+if test "${hpd}" = "0"; then setenv hdmi_hpd "disablehpd=true"; fi
+if test "${cec}" = "1"; then setenv hdmi_cec "hdmitx=cecf"; fi
 
-#------------------------------------------------------------------------------------------------------
-#
-# System Status LED: Blink the RGB LED or disable it
-# valid values: 1 off
-#
-#------------------------------------------------------------------------------------------------------
-setenv led_blink    "1"
+setenv bootargs "console=ttyS0,115200n8 console=tty0 root=/dev/mmcblk0p1 rootwait rw no_console_suspend vdaccfg=0xa000 logo=osd1,loaded,0x7900000,720p,full dmfc=3 cvbsmode=576cvbs hdmimode=${m} m_bpp=${m_bpp} vout=${vout_mode} ${disableuhs} ${hdmi_hpd} ${hdmi_cec}"
+ext4load mmc 0:1 0x21000000 /boot/uImage
+ext4load mmc 0:1 0x21800000 /boot/meson8b_odroidc.dtb
+fdt addr 21800000
 
-#------------------------------------------------------------------------------------------------------
-#
-# U-Boot bootcmd command
-#  
-#------------------------------------------------------------------------------------------------------
-# Android
-# setenv bootcmd "movi r k 0:1 40008000; bootz 0x40008000"
-# Ubuntu
-#setenv bootcmd "fatload mmc 0:1 0x40008000 zImage; fatload mmc 0:1 0x42000000 uInitrd; bootz 0x40008000 0x42000000"
-# yocto no ram disk
-setenv bootcmd "fatload mmc 0:1 0x40008000 zImage; bootz 0x40008000"
+if test "${vpu}" = "0"; then fdt rm /mesonstream; fdt rm /vdec; fdt rm /ppmgr; fi
 
-#------------------------------------------------------------------------------------------------------
-#
-# Kernel boot arguments
-#
-#------------------------------------------------------------------------------------------------------
-setenv bootargs "${bootrootfs} ${fb_control} fb_x_res=${fb_x_res} fb_y_res=${fb_y_res} vout=${vout} hdmi_phy_res=${hdmi_phy_res} led_blink=${led_blink}"
+if test "${hdmioutput}" = "0"; then fdt rm /mesonfb; fi
 
-# Boot the board
-boot
+bootm 0x21000000 - 0x21800000
