--- a/conf/machine/odroidc1.conf
+++ b/conf/machine/odroidc1.conf
@@ -28,7 +28,7 @@ KERNEL_DEVICETREE ?= "meson8b_odroidc.dtb"
 SERIAL_CONSOLE ?= "115200 ttyS0"
 
 KERNEL_IMAGETYPE ?= "uImage"
-IMAGE_CLASSES += "odroidc-sdimg"
+IMAGE_CLASSES += "image_types_odroidc"
 # ${SDIMG_ROOTFS_TYPE} is workaround, otherwise system mkfs.extX is used
 # (e2fsprogs-native aren't built automatically). Native e2fsprogs should be
 # built automatically because of IMAGE_TYPEDEP specified in odroidc-sdimg class.
