--- a/conf/machine/wetekplay.conf
+++ b/conf/machine/wetekplay.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
-#@NAME: WeTeK play
-#@DESCRIPTION: Machine configuration for the WeTeK play
+#@NAME: WeTeK Play
+#@DESCRIPTION: Machine configuration for WeTeK Play
 
 GST_VERSION = "0.10"
 
@@ -98,7 +98,7 @@ IMAGE_CMD_sdcard_append = " \
     rm -Rf ${IMAGEDIR}; \
     "
 
-MACHINE_FEATURES = "bluetooth fb meson6 usbhost vfat alsa dvb-c legacykernel nolcd"
+MACHINE_FEATURES = "meson6"
 
 # We know about rtc
 include conf/machine/include/build-extras.inc
