Fix missing inc values

--- a/conf/machine/s905.conf
+++ b/conf/machine/s905.conf
@@ -1,12 +1,30 @@
 # Amlogic S905 boards
 
 require conf/machine/include/amlogic-s905.inc
-require conf/machine/include/amlogic-p200-dtb.inc
-require conf/machine/include/amlogic-p201-dtb.inc
-require conf/machine/include/hardkernel-odroidc2-dtb.inc
-require conf/machine/include/tronsmart-vega-s95-meta-dtb.inc
-require conf/machine/include/tronsmart-vega-s95-pro-dtb.inc
-require conf/machine/include/tronsmart-vega-s95-telos-dtb.inc
-require conf/machine/include/nexbox-a95x-s905-dtb.inc
-require conf/machine/include/meson-gxbb-wetek-hub.dtb
-require conf/machine/include/meson-gxbb-wetek-play2.dtb
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-p200.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-p200.dtb;meson-gxbb-p200.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-p201.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-p201.dtb;meson-gxbb-p201.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-odroidc2.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-odroidc2.dtb;meson-gxbb-odroidc2.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-vega-s95-meta.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-vega-s95-meta.dtb;meson-gxbb-vega-s95-meta.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-vega-s95-pro.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-vega-s95-pro.dtb;meson-gxbb-vega-s95-pro.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-vega-s95-telos.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-vega-s95-telos.dtb;meson-gxbb-vega-s95-telos.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-nexbox-a95x.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-nexbox-a95x.dtb;meson-gxbb-nexbox-a95x.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-nexbox-a95x.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-nexbox-a95x.dtb;meson-gxbb-nexbox-a95x.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-wetek-play2.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-wetek-play2.dtb;meson-gxbb-wetek-play2.dtb"
