--- a/conf/machine/s9xxx.conf
+++ b/conf/machine/s9xxx.conf
@@ -1,23 +1,63 @@
 # Amlogic S905/S905X/S905D/S912 boards
 
 require conf/machine/include/amlogic-s9xxx.inc
-require conf/machine/include/amlogic-p212-dtb.inc
-require conf/machine/include/nexbox-a95x-s905x-dtb.inc
-require conf/machine/include/khadas-vim-dtb.inc
-require conf/machine/include/khadas-vim2-dtb.inc
-require conf/machine/include/hwacom-amazetv-dtb.inc
-require conf/machine/include/amlogic-p200-dtb.inc
-require conf/machine/include/amlogic-p201-dtb.inc
-require conf/machine/include/hardkernel-odroidc2-dtb.inc
-require conf/machine/include/tronsmart-vega-s95-meta-dtb.inc
-require conf/machine/include/tronsmart-vega-s95-pro-dtb.inc
-require conf/machine/include/tronsmart-vega-s95-telos-dtb.inc
-require conf/machine/include/nexbox-a95x-s905-dtb.inc
-require conf/machine/include/wetek-hub-dtb.inc
-require conf/machine/include/wetek-play2-dtb.inc
-require conf/machine/include/amlogic-p230-dtb.inc
-require conf/machine/include/amlogic-p231-dtb.inc
-require conf/machine/include/amlogic-q200-dtb.inc
-require conf/machine/include/amlogic-q201-dtb.inc
-require conf/machine/include/nexbox-a1-dtb.inc
-require conf/machine/include/libretech-cc-dtb.inc
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-p200.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-p200.dtb;meson-gxbb-p200.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-p201.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-p201.dtb;meson-gxbb-p201.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-odroidc2.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-odroidc2.dtb;meson-gxbb-odroidc2.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-vega-s95-meta.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-vega-s95-meta.dtb;meson-gxbb-vega-s95-meta.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-vega-s95-pro.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-vega-s95-pro.dtb;meson-gxbb-vega-s95-pro.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-vega-s95-telos.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-vega-s95-telos.dtb;meson-gxbb-vega-s95-telos.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-nexbox-a95x.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-nexbox-a95x.dtb;meson-gxbb-nexbox-a95x.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-nexbox-a95x.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-nexbox-a95x.dtb;meson-gxbb-nexbox-a95x.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxbb-wetek-play2.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxbb-wetek-play2.dtb;meson-gxbb-wetek-play2.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905x-p212.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905x-p212.dtb;meson-gxl-s905x-p212.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905x-nexbox-a95x.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905x-nexbox-a95x.dtb;meson-gxl-s905x-nexbox-a95x.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905x-khadas-vim.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905x-khadas-vim.dtb;meson-gxl-s905x-khadas-vim.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905x-hwacom-amazetv.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905x-hwacom-amazetv.dtb;meson-gxl-s905x-hwacom-amazetv.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905x-libretech-cc.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905x-libretech-cc.dtb;meson-gxl-s905x-libretech-cc.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905d-p230.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905d-p230.dtb;meson-gxl-s905d-p230.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905d-p231.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905d-p231.dtb;meson-gxl-s905d-p231.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxm-q200.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxm-q200.dtb;meson-gxm-q200.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxm-q201.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxm-q201.dtb;meson-gxm-q201.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxm-nexbox-a1.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxm-nexbox-a1.dtb;meson-gxm-nexbox-a1.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxm-khadas-vi2.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxm-khadas-vim2.dtb;meson-gxm-khadas-vim2.dtb"
