--- a/conf/machine/s905d.conf
+++ b/conf/machine/s905d.conf
@@ -1,5 +1,9 @@
 # Amlogic S905D boards
 
 require conf/machine/include/amlogic-s905d.inc
-require conf/machine/include/amlogic-p230-dtb.inc
-require conf/machine/include/amlogic-p231-dtb.inc
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905d-p230.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905d-p230.dtb;meson-gxl-s905d-p230.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905d-p231.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905d-p231.dtb;meson-gxl-s905d-p231.dtb"
