--- a/conf/machine/s905x.conf
+++ b/conf/machine/s905x.conf
@@ -1,8 +1,18 @@
 # Amlogic S905X boards
 
 require conf/machine/include/amlogic-s905x.inc
-require conf/machine/include/amlogic-p212-dtb.inc
-require conf/machine/include/nexbox-a95x-s905x-dtb.inc
-require conf/machine/include/khadas-vim-dtb.inc
-require conf/machine/include/hwacom-amazetv-dtb.inc
-require conf/machine/include/libretech-cc-dtb.inc
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905x-p212.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905x-p212.dtb;meson-gxl-s905x-p212.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905x-nexbox-a95x.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905x-nexbox-a95x.dtb;meson-gxl-s905x-nexbox-a95x.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905x-khadas-vim.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905x-khadas-vim.dtb;meson-gxl-s905x-khadas-vim.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905x-hwacom-amazetv.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905x-hwacom-amazetv.dtb;meson-gxl-s905x-hwacom-amazetv.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxl-s905x-libretech-cc.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxl-s905x-libretech-cc.dtb;meson-gxl-s905x-libretech-cc.dtb"
