--- a/conf/machine/s912.conf
+++ b/conf/machine/s912.conf
@@ -1,7 +1,15 @@
 # Amlogic S912 boards
 
 require conf/machine/include/amlogic-s912.inc
-require conf/machine/include/amlogic-q200-dtb.inc
-require conf/machine/include/amlogic-q201-dtb.inc
-require conf/machine/include/nexbox-a1-dtb.inc
-require conf/machine/include/khadas-vim2-dtb.inc
+
+KERNEL_DEVICETREE += "amlogic/meson-gxm-q200.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxm-q200.dtb;meson-gxm-q200.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxm-q201.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxm-q201.dtb;meson-gxm-q201.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxm-nexbox-a1.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxm-nexbox-a1.dtb;meson-gxm-nexbox-a1.dtb"
+
+KERNEL_DEVICETREE += "amlogic/meson-gxm-khadas-vi2.dtb"
+IMAGE_BOOT_FILES += "Image-meson-gxm-khadas-vim2.dtb;meson-gxm-khadas-vim2.dtb"
