--- a/conf/machine/odroidc2.conf
+++ b/conf/machine/odroidc2.conf
@@ -4,6 +4,8 @@
 
 GST_VERSION = "0.10"
 
+SOC_FAMILY = "AMLS905"
+
 # Amlogic defaults
 require conf/machine/include/amlogic.inc
 IMAGE_CLASSES += "image_types_odroid"
