--- a/conf/machine/wetekplay2.conf
+++ b/conf/machine/wetekplay2.conf
@@ -4,7 +4,7 @@
 
 GST_VERSION = "0.10"
 
-SOC_FAMILY = "aml8726"
+SOC_FAMILY = "AMLS905"
 
 # Amlogic defaults
 require conf/machine/include/wetek-amlogic.inc
