--- a/conf/machine/alien5.conf
+++ b/conf/machine/alien5.conf
@@ -13,7 +13,7 @@ require conf/machine/include/arm/arch-armv8.inc
 require conf/machine/include/soc-family.inc
 
 # enable multilib
-require conf/machine/include/multilib.inc
+# require conf/machine/include/multilib.inc
 
 IMAGE_CLASSES += "sdcard_image-alien5"
 SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext4"
