Add k1pro for test, it's very similar to alien5 so we're gonna use some alien5 things

--- a/conf/machine/k1pro.conf
+++ b/conf/machine/k1pro.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: 
-#@DESCRIPTION: Machine configuration for the Amiko Alien5 
+#@DESCRIPTION: Machine configuration for the Mecool K1 Pro 
 
 KERNEL_FILE = "kernel.itb"
 ROOTFS_FILE = "rootfs.tar.bz2"
@@ -30,7 +30,7 @@ PREFERRED_VERSION_linux-linkdroid = "3.14.29"
 
 KERNEL_CLASSES += "aarch64-fitimage"
 KERNEL_IMAGETYPE = "fitImage"
-KERNEL_DEVICETREE = "alien5.dtb"
+KERNEL_DEVICETREE = "k1pro.dtb"
 
 UBOOT_ENTRYPOINT = "0x01080000"
 UBOOT_LOADADDRESS = "0x01080000"
@@ -43,24 +43,24 @@ MACHINE_FEATURES = "bluetooth usbhost vfat alsa dvb-c nolcd hdmicec fb skins1080
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
     linkdroid-autoscript \
     \
-    linkdroid-mali-${MACHINE} \
+    linkdroid-mali-alien5 \
     linkdroid-gst-amlavsink1 \
     gst-app \
-    linkdroid-libamplayer-${MACHINE} \
-    linkdroid-libamavutils-${MACHINE} \
-    linkdroid-libamadec-${MACHINE} \
-    linkdroid-libamcodec-${MACHINE} \
+    linkdroid-libamplayer-alien5 \
+    linkdroid-libamavutils-alien5 \
+    linkdroid-libamadec-alien5 \
+    linkdroid-libamcodec-alien5 \
     linkdroid-amlsetfb \
     \
     kernel-modules \
     amremote \
     linkdroid-opengl-amlogic \
     \
-    linkdroid-stb-${MACHINE} \
-    linkdroid-libavlib-audio-so-${MACHINE} \
+    linkdroid-stb-alien5 \
+    linkdroid-libavlib-audio-so-alien5 \
     libmad \
-    linkdroid-extra-${MACHINE} \
-    "
+    linkdroid-extra-alien5 \
+    " 
 
 DVBPROVIDER = "kernel"
 DVBSKYPROVIDER = "kernel"
@@ -104,6 +104,7 @@ KERNEL_MODULE_AUTOLOAD += " \
     rc-core \
     cfg80211 \
     8189es \
+    avl6862 \
 "
 
 # We know about rtc
