--- a/conf/machine/odroidc2.conf
+++ b/conf/machine/odroidc2.conf
@@ -84,4 +84,4 @@ KERNEL_IMAGETYPE ?= "Image"
 UBOOT_BINARY ?= "u-boot.bin"
 UBOOT_MACHINE_odroidc2 = "odroidc2_defconfig"
 
-MACHINE_FEATURES = "serial usbgadget fb usbhost vfat ext2 rtc alsa legacykernel nolcd"
+MACHINE_FEATURES = "serial usbgadget fb usbhost vfat ext2 rtc alsa nolcd"
