--- a/conf/machine/x8hp.conf
+++ b/conf/machine/x8hp.conf
@@ -109,7 +109,7 @@ IMAGE_CMD_sdcard_append = " \
     rm -Rf ${IMAGEDIR}; \
     "
 
-MACHINE_FEATURES = "wlan bluetooth fb meson8 usbhost vfat alsa dvb-c legacykernel nolcd"
+MACHINE_FEATURES = "wlan bluetooth fb meson8 usbhost vfat alsa dvb-c nolcd"
 
 # We know about rtc
 include conf/machine/include/build-extras.inc
