Cleanup conf/inc files

--- a/conf/machine/wetekplay.conf
+++ b/conf/machine/wetekplay.conf
@@ -2,12 +2,16 @@
 #@NAME: WeTeK Play
 #@DESCRIPTION: Machine configuration for WeTeK Play
 
-GST_VERSION = "0.10"
-
 SOC_FAMILY = "AML8726"
 
 # Amlogic defaults
 require conf/machine/include/wetek-amlogic.inc
+# Uncomment the following line to enable the hard floating point abi. Note that
+# this breaks some binary libraries and 3D (neither of which ship with
+# meta-yocto). For maximum compatibility, leave this disabled.
+DEFAULTTUNE ?= "cortexa9hf-neon"
+include conf/machine/include/tune-cortexa9.inc
+require conf/machine/include/soc-family.inc
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
     wetek-dvb-modules-${MACHINE} \
@@ -17,8 +21,6 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
     gst-fluendo-mpegdemux \
     opengl-amlogic \
     "
-
-DVBPROVIDER = "kernel"
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
     kernel-module-cdfs \
@@ -31,17 +33,7 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
     kernel-module-CH341 \
     amlsetfb \
     amremote \
-    pcsc-lite \
     "
-
-MACHINE_EXTRA_RRECOMMENDS = " \
-    libamplayer \
-    libamavutils \
-    libamadec \
-    libamcodec \
-    "
-
-include conf/machine/include/autoload-filesystems.inc
 
 KERNEL_MODULE_AUTOLOAD += "\
     e2-procfs \
@@ -56,48 +48,10 @@ KERNEL_MODULE_AUTOLOAD += "\
     hidp \
 "
 
-# Uncomment the following line to enable the hard floating point abi. Note that
-# this breaks some binary libraries and 3D (neither of which ship with
-# meta-yocto). For maximum compatibility, leave this disabled.
-DEFAULTTUNE ?= "cortexa9hf-neon"
-include conf/machine/include/tune-cortexa9.inc
-require conf/machine/include/soc-family.inc
-
-IMAGE_FSTYPES += "ext4 sdcard"
-IMAGE_ROOTFS_SIZE = "976562"
-IMAGE_EXTRA_SPACE = "0"
-IMAGE_OVERHEAD_FACTOR = "1.0"
-
-# Serial console to be used
-SERIAL_CONSOLE = "115200 ttyS0"
-
 PREFERRED_PROVIDER_virtual/kernel = "linux-wetek"
 PREFERRED_VERSION_linux-wetek = "3.10.93"
 
 KERNEL_IMAGETYPE = "uImage-dtb"
 KERNEL_DEVICETREE = "wetekplay.dtd"
 
-UBOOT_ENTRYPOINT  = "0x80008000"
-UBOOT_LOADADDRESS = "0x80008000"
-
-IMAGEDIR ?= "${MACHINE}"
-
-IMAGE_CMD_sdcard_append = " \
-    mkdir -p ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}; \
-    mv ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.wetek-sd.img ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}/${IMAGE_NAME}.sdcard.img; \
-    echo ${IMAGE_VER_STRING} > ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}/imageversion; \
-    cd ${DEPLOY_DIR_IMAGE}; \
-    zip ${IMAGE_NAME}_sdcard.zip ${IMAGEDIR}/*; \
-    rm -f ${DEPLOY_DIR_IMAGE}/*.ext4; \
-    rm -f ${DEPLOY_DIR_IMAGE}/*.manifest; \
-    rm -f ${DEPLOY_DIR_IMAGE}/.ext4; \
-    rm -f ${DEPLOY_DIR_IMAGE}/.manifest; \
-    rm -f ${DEPLOY_DIR_IMAGE}/.wetek-sd.img; \
-    rm -f ${DEPLOY_DIR_IMAGE}/*.rootfs.wetek-sd.img; \
-    rm -Rf ${IMAGEDIR}; \
-    "
-
-MACHINE_FEATURES = "meson6"
-
-# We know about rtc
-include conf/machine/include/build-extras.inc
+MACHINE_FEATURES += "meson6"
