--- a/conf/machine/odroidc2.conf
+++ b/conf/machine/odroidc2.conf
@@ -12,6 +12,7 @@ IMAGE_CLASSES += "image_types_odroid"
 require conf/machine/include/arm/arch-armv8.inc
 
 DVBPROVIDER = "kernel"
+DVBSKYPROVIDER = "kernel"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
     hardkernel-mali-${MACHINE} \
