Fix missing inc file

--- a/conf/machine/alien5.conf
+++ b/conf/machine/alien5.conf
@@ -2,6 +2,8 @@
 #@NAME: 
 #@DESCRIPTION: Machine configuration for the Amiko Alien5 
 
+require conf/machine/include/linkdroid.inc
+
 KERNEL_DEVICETREE = "alien5.dtb"
 
 KERNEL_MODULE_AUTOLOAD += " \
