--- a/conf/machine/k1pro.conf
+++ b/conf/machine/k1pro.conf
@@ -2,6 +2,8 @@
 #@NAME: 
 #@DESCRIPTION: Machine configuration for the Mecool K1 Pro 
 
+require conf/machine/include/linkdroid.inc
+
 KERNEL_DEVICETREE = "k1pro.dtb"
 
 KERNEL_MODULE_AUTOLOAD += " \
