Use CoreELEC linux for k1pro, still I can't compile it

--- a/conf/machine/k1pro.conf
+++ b/conf/machine/k1pro.conf
@@ -22,3 +22,6 @@ KERNEL_MODULE_AUTOLOAD += " \
     8189es \
     avl6211 \
 "
+
+PREFERRED_PROVIDER_virtual/kernel = "linux-mecool"
+PREFERRED_VERSION_linux-mecool = "3.14"
