--- a/conf/machine/k1pro.conf
+++ b/conf/machine/k1pro.conf
@@ -21,6 +21,7 @@ KERNEL_MODULE_AUTOLOAD += " \
     cfg80211 \
     8189es \
     avl6211 \
+    avl6882 \
 "
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-mecool"
