First working avl/wetek patch for k1pro by Persian Prince: I'm not sure about boot or dvb support but at least it compiles now ... For k1pro I'm using alien5's kernel + avl/wetek sources from https://github.com/CoreELEC/linux-amlogic k1pro.dts is based on alien5.dts but the original k1pro.dts is here: https://github.com/CoreELEC/device-trees-amlogic/blob/master/gxl_p230_k1_pro.dts I have to thank https://forums.openpli.org/user/177673-ftp21/ and https://forums.openpli.org/user/16858-engineerkhan15/ because without their efforts this wouldn't be possible.

--- a/conf/machine/k1pro.conf
+++ b/conf/machine/k1pro.conf
@@ -24,5 +24,8 @@ KERNEL_MODULE_AUTOLOAD += " \
     avl6882 \
 "
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-mecool"
-PREFERRED_VERSION_linux-mecool = "3.14"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
+    kernel-module-avl6862 \
+    kernel-module-wetekdvb \
+    kernel-module-wetekplay \
+    "
