Support k2pro new version as it's very similar to k1pro, it's not the old version for k2pro, more information: https://forums.openpli.org/topic/57878-howto-build-unofficial-pli-for-your-unsupported-receiver/?view=findpost&p=897124

--- a/conf/machine/k2pro.conf
+++ b/conf/machine/k2pro.conf
@@ -1,10 +1,10 @@
 #@TYPE: Machine
 #@NAME: 
-#@DESCRIPTION: Machine configuration for the Mecool K1 Pro
+#@DESCRIPTION: Machine configuration for the Mecool K2 Pro (New version)
 
 require conf/machine/include/linkdroid.inc
 
-KERNEL_DEVICETREE = "k1pro.dtb"
+KERNEL_DEVICETREE = "k2pro.dtb"
 
 KERNEL_MODULE_AUTOLOAD += " \
     se2io_se \
