--- a/recipes-bsp/linux/linux-linkdroid-3.14.29/k2pro/k2pro.dts
+++ b/recipes-bsp/linux/linux-linkdroid-3.14.29/k2pro/k2pro.dts
@@ -1213,13 +1213,14 @@
 	dvb {
 		compatible = "amlogic, dvb";
 		dev_name = "dvb";
+		status = "okay";
 		//"parallel","serial","disable"
 		ts0 = "parallel";
-		ts0_control = <0x0>;
-		ts0_invert = <0x0>;
+		ts0_control = <0>;
+		ts0_invert = <0>;
 		fec_reset_gpio-gpios = <&gpio GPIODV_13 GPIO_ACTIVE_HIGH>;
 		power_ctrl_gpio-gpios = <&gpio GPIODV_11 GPIO_ACTIVE_LOW>;
-		pinctrl-names = "p_ts0", "s_ts0", "s_ts1";
+		pinctrl-names = "p_ts0", "s_ts0";
 		pinctrl-0 = <&dvb_p_ts0_pins>;
 		pinctrl-1 = <&dvb_s_ts0_pins>;
 //		pinctrl-2 = <&dvb_s_ts1_pins>;
@@ -1232,14 +1233,15 @@
 
 	dvbfe {
 		compatible = "amlogic, dvbfe";
-		//dev_name = "dvbfe";
+		//dev_name = "avl6211";
 		status = "okay";
 		dtv_demod0 = "Avl6211";
-		dtv_demod0_i2c_adap_id = <2>;
-		dtv_demod0_i2c_addr = <0x60>;
+		dtv_demod0_i2c_adap_id = <1>;
+		dtv_demod0_i2c_addr = <0xC0>;
 		dtv_demod0_reset_value = <0>;
-		dtv_demod0_reset_gpio-gpios = <&gpio GPIODV_13 GPIO_ACTIVE_LOW>;
-		dtv_demod0_power_gpio-gpios = <&gpio GPIODV_14 GPIO_ACTIVE_LOW>;
+		//dtv_demod0_reset_gpio = <&gpio GPIOY_13 GPIO_ACTIVE_HIGH>;
+		dtv_demod0_reset_gpio-gpios = <&gpio GPIOY_13 GPIO_ACTIVE_LOW>;
+		dtv_demod0_power_gpio-gpios = <&gpio GPIOY_11 GPIO_ACTIVE_LOW>;
 		fe0_dtv_demod = <0>;
 		fe0_ts = <0>;
 		fe0_dev = <0>;
