--- a/conf/machine/k2pro.conf
+++ b/conf/machine/k2pro.conf
@@ -6,7 +6,7 @@ require conf/machine/include/linkdroid.inc
 
 KERNEL_DEVICETREE = "k2pro.dtb"
 
-KERNEL_MODULE_AUTOLOAD += " \
+KERNEL_MODULE_AUTOLOAD += "\
     se2io_se \
     ampanel \
     a5stb \
@@ -24,7 +24,7 @@ KERNEL_MODULE_AUTOLOAD += " \
     avl6882 \
 "
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
     kernel-module-avl6862 \
     kernel-module-wetekdvb \
     kernel-module-wetekplay \
