Fix k2pro build, you need to edit k2pro.dts as it's just a copy of k1pro.dts based on alien5.dts

--- a/conf/machine/k1pro.conf
+++ b/conf/machine/k1pro.conf
@@ -22,9 +22,13 @@ KERNEL_MODULE_AUTOLOAD += "\
     8189es \
     avl6211 \
     avl6882 \
+    wetekplay \
+    wetekdvb \
 "
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
+    firmware-avl6211 \
+    firmware-avl6882 \
     kernel-module-avl6862 \
     kernel-module-wetekdvb \
     kernel-module-wetekplay \
