--- a/conf/machine/k2pro.conf
+++ b/conf/machine/k2pro.conf
@@ -22,9 +22,13 @@ KERNEL_MODULE_AUTOLOAD += "\
     8189es \
     avl6211 \
     avl6882 \
+    wetekplay \
+    wetekdvb \
 "
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
+    firmware-avl6211 \
+    firmware-avl6882 \
     kernel-module-avl6862 \
     kernel-module-wetekdvb \
     kernel-module-wetekplay \
