Add avl6211 sources to dedicated avl patch

--- a/conf/machine/k1pro.conf
+++ b/conf/machine/k1pro.conf
@@ -20,15 +20,14 @@ KERNEL_MODULE_AUTOLOAD += "\
     rc-core \
     cfg80211 \
     8189es \
-    avl6211 \
+    avl6211_fe \
     avl6882 \
-    wetekplay \
-    wetekdvb \
 "
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
     firmware-avl6211 \
     firmware-avl6882 \
+    kernel-module-avl6211-fe \
     kernel-module-avl6862 \
     kernel-module-wetekdvb \
     kernel-module-wetekplay \
