--- a/recipes-bsp/linux/linux-linkdroid-3.14.29/k2pro/k2pro.dts
+++ b/recipes-bsp/linux/linux-linkdroid-3.14.29/k2pro/k2pro.dts
@@ -1215,14 +1215,11 @@
 		dev_name = "dvb";
 		//"parallel","serial","disable"
 		ts0 = "parallel";
-		ts0_control = <0x0>;
-		ts0_invert = <0x0>;
-		fec_reset_gpio-gpios = <&gpio GPIODV_13 GPIO_ACTIVE_HIGH>;
-		power_ctrl_gpio-gpios = <&gpio GPIODV_11 GPIO_ACTIVE_LOW>;
-		pinctrl-names = "p_ts0", "s_ts0", "s_ts1";
+		ts0_control = <0>;
+		ts0_invert = <0>;
+		pinctrl-names = "p_ts0";//"p_ts0","s_ts0";
 		pinctrl-0 = <&dvb_p_ts0_pins>;
-		pinctrl-1 = <&dvb_s_ts0_pins>;
-//		pinctrl-2 = <&dvb_s_ts1_pins>;
+//		pinctrl-1 = <&dvb_s_ts0_pins>;
 		resets = <&clock GCLK_IDX_DEMUX
 				&clock GCLK_IDX_ASYNC_FIFO
 				&clock GCLK_IDX_AHB_ARB0
@@ -1232,17 +1229,36 @@
 
 	dvbfe {
 		compatible = "amlogic, dvbfe";
-		//dev_name = "dvbfe";
-		status = "okay";
-		dtv_demod0 = "Avl6211";
+		dev_name = "dvbfe";
+		dtv_demod0 = "dm6000";
 		dtv_demod0_i2c_adap_id = <2>;
-		dtv_demod0_i2c_addr = <0x60>;
+		dtv_demod0_i2c_addr = <0x38>;
 		dtv_demod0_reset_value = <0>;
-		dtv_demod0_reset_gpio-gpios = <&gpio GPIODV_13 GPIO_ACTIVE_LOW>;
-		dtv_demod0_power_gpio-gpios = <&gpio GPIODV_14 GPIO_ACTIVE_LOW>;
+		dtv_demod0_reset_gpio = <&gpio GPIODV_24 GPIO_ACTIVE_HIGH>;
+		dtv_demod0_lnbpower = <&gpio_ao GPIOAO_6 GPIO_ACTIVE_HIGH>;
 		fe0_dtv_demod = <0>;
 		fe0_ts = <0>;
 		fe0_dev = <0>;
+		dtv_demod1 = "dm60001";
+		dtv_demod1_i2c_adap_id = <2>;
+		dtv_demod1_i2c_addr = <0x38>;
+		dtv_demod1_reset_value = <0>;
+		dtv_demod1_reset_gpio = <&gpio GPIODV_24 GPIO_ACTIVE_HIGH>;
+		dtv_demod1_lnbpower = <&gpio_ao GPIOAO_6 GPIO_ACTIVE_HIGH>;
+		dtv_demod1_antoverload = <&gpio_ao GPIOAO_5 GPIO_ACTIVE_HIGH>;
+		fe1_dtv_demod = <1>;
+		fe1_ts = <0>;
+		fe1_dev = <1>;
+		dtv_demod2 = "dm60002";
+		dtv_demod2_i2c_adap_id = <2>;
+		dtv_demod2_i2c_addr = <0x38>;
+		dtv_demod2_reset_value = <0>;
+		dtv_demod2_reset_gpio = <&gpio GPIODV_24 GPIO_ACTIVE_HIGH>;
+		dtv_demod2_lnbpower = <&gpio_ao GPIOAO_6 GPIO_ACTIVE_HIGH>;
+		dtv_demod2_antoverload = <&gpio_ao GPIOAO_5 GPIO_ACTIVE_HIGH>;
+		fe2_dtv_demod = <2>;
+		fe2_ts = <0>;
+		fe2_dev = <2>;
 
 	};
     /* SMC */
