Split kernel files for linkdroid and mecool

--- a/conf/machine/alien5.conf
+++ b/conf/machine/alien5.conf
@@ -2,7 +2,14 @@
 #@NAME: 
 #@DESCRIPTION: Machine configuration for the Amiko Alien5
 
+SOC_FAMILY = "AML905D"
+
 require conf/machine/include/linkdroid.inc
+
+PREFERRED_PROVIDER_virtual/kernel = "linux-linkdroid"
+PREFERRED_VERSION_linux-linkdroid = "3.14.29"
+
+MACHINEKERNEL = "linkdroid"
 
 KERNEL_DEVICETREE = "alien5.dtb"
 
