--- a/conf/machine/k2pro.conf
+++ b/conf/machine/k2pro.conf
@@ -2,7 +2,14 @@
 #@NAME: 
 #@DESCRIPTION: Machine configuration for the Mecool K2 Pro (New version)
 
+SOC_FAMILY = "AML905D"
+
 require conf/machine/include/linkdroid.inc
+
+PREFERRED_PROVIDER_virtual/kernel = "linux-mecool"
+PREFERRED_VERSION_linux-mecool = "3.14.29"
+
+MACHINEKERNEL = "mecool"
 
 KERNEL_DEVICETREE = "k2pro.dtb"
 
@@ -20,15 +27,10 @@ KERNEL_MODULE_AUTOLOAD += "\
     rc-core \
     cfg80211 \
     8189es \
-    avl6211_fe \
     avl6882 \
 "
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
-    firmware-avl6211 \
     firmware-avl6882 \
-    kernel-module-avl6211-fe \
     kernel-module-avl6862 \
-    kernel-module-wetekdvb \
-    kernel-module-wetekplay \
     "
