Remove extra kernel modules and enable what we need, also autoload needed models for avl6862

--- a/conf/machine/k1plus.conf
+++ b/conf/machine/k1plus.conf
@@ -27,9 +27,15 @@ KERNEL_MODULE_AUTOLOAD += "\
     rc-core \
     cfg80211 \
     8189es \
+    aml \
+    aml_fe \
     avl6862 \
+    r848a \
 "
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
+    kernel-module-aml \
+    kernel-module-aml-fe \
     kernel-module-avl6862 \
-    "
+    kernel-module-r848a \
+"
