--- a/recipes-bsp/linux/linux-mecool-3.14.29/k3pro/k3pro.dts
+++ b/recipes-bsp/linux/linux-mecool-3.14.29/k3pro/k3pro.dts
@@ -1170,7 +1170,7 @@
 		ts0_control = <0>;
 		ts0_invert = <0>;
 		pinctrl-names = "p_ts0";//"p_ts0","s_ts0";
-		pinctrl-0 = <&dvb_p_ts0_pins>;
+//		pinctrl-0 = <&dvb_p_ts0_pins>;
 //		pinctrl-1 = <&dvb_s_ts0_pins>;
 		resets = <&clock GCLK_IDX_DEMUX
 				&clock GCLK_IDX_ASYNC_FIFO
