--- a/conf/machine/k2pro_s905.conf
+++ b/conf/machine/k2pro_s905.conf
@@ -5,10 +5,36 @@
 SOC_FAMILY = "AML905"
 
 require conf/machine/include/mecool.inc
+
 PREFERRED_PROVIDER_virtual/kernel = "linux-coreelec"
-#PREFERRED_VERSION_linux-coreelec = "3.14.29"
+PREFERRED_VERSION_linux-coreelec = "3.14.29"
 
 MACHINEKERNEL = "coreelec"
 
-#KERNEL_DEVICETREE = "gxbb_p200_k2_pro.dtb"
+KERNEL_DEVICETREE = "gxbb_p200_k2_pro.dtb"
 #PREFERRED_VERSION_gcc-cross-${TARGET_ARCH} ?= "4.9%"
+
+
+KERNEL_MODULE_AUTOLOAD += "\
+    mali \
+    rfcomm \
+    hidp \
+    bluetooth \
+    6lowpan-iphc \
+    libcrc32c \
+    mceusb \
+    rc-core \
+    cfg80211 \
+    8189es \
+    aml \
+    aml_fe \
+    avl6862 \
+    r848a \
+"
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
+    kernel-module-aml \
+    kernel-module-aml-fe \
+    kernel-module-avl6862 \
+    kernel-module-r848a \
+"
