more fixes for coreelec recipe

--- a/conf/machine/k2pro_s905.conf
+++ b/conf/machine/k2pro_s905.conf
@@ -7,7 +7,7 @@ SOC_FAMILY = "AML905"
 require conf/machine/include/mecool.inc
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-coreelec"
-PREFERRED_VERSION_linux-coreelec = "3.14.29"
+PREFERRED_VERSION_linux-coreelec = "3.14.29%"
 
 MACHINEKERNEL = "coreelec"
 
