update coreelec kernel recipe to use pli-extras fork

--- a/conf/machine/k2pro_s905.conf
+++ b/conf/machine/k2pro_s905.conf
@@ -1,5 +1,5 @@
 #@TYPE: Machine
-#@NAME: 
+#@NAME: Mecool K2 Pro(S905 soc)
 #@DESCRIPTION: Machine configuration for the Mecool K2 Pro (old version)
 
 SOC_FAMILY = "AML905"
