add e2procfs recipe for mecool devices

--- a/conf/machine/k2pro_s905.conf
+++ b/conf/machine/k2pro_s905.conf
@@ -16,6 +16,7 @@ KERNEL_DEVICETREE = "gxbb_p200_k2_pro.dtb"
 
 
 KERNEL_MODULE_AUTOLOAD += "\
+    e2_procfs \
     mali \
     rfcomm \
     hidp \
