use coreelec kernel for all mecool devices

--- a/conf/machine/k2pro_s905D.conf
+++ b/conf/machine/k2pro_s905D.conf
@@ -1,22 +1,20 @@
 #@TYPE: Machine
-#@NAME: 
+#@NAME: Mecool K2 Pro(S905D soc)
 #@DESCRIPTION: Machine configuration for the Mecool K2 Pro (New version)
 
 SOC_FAMILY = "AML905D"
 
-require conf/machine/include/linkdroid.inc
+require conf/machine/include/mecool.inc
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-mecool"
-PREFERRED_VERSION_linux-mecool = "3.14.29"
+PREFERRED_PROVIDER_virtual/kernel = "linux-coreelec"
+PREFERRED_VERSION_linux-coreelec = "3.14.29%"
 
-MACHINEKERNEL = "mecool"
+MACHINEKERNEL = "coreelec"
 
-KERNEL_DEVICETREE = "k2pro.dtb"
+KERNEL_DEVICETREE = "gxl_p230_k1_pro.dtb"
 
 KERNEL_MODULE_AUTOLOAD += "\
-    se2io_se \
-    ampanel \
-    a5stb \
+    e2_procfs \
     mali \
     rfcomm \
     hidp \
