--- a/conf/machine/k3pro.conf
+++ b/conf/machine/k3pro.conf
@@ -4,19 +4,17 @@
 
 SOC_FAMILY = "AML912"
 
-require conf/machine/include/linkdroid.inc
+require conf/machine/include/mecool.inc
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-mecool"
-PREFERRED_VERSION_linux-mecool = "3.14.29"
+PREFERRED_PROVIDER_virtual/kernel = "linux-coreelec"
+PREFERRED_VERSION_linux-coreelec = "3.14.29%"
 
-MACHINEKERNEL = "mecool"
+MACHINEKERNEL = "coreelec"
 
-KERNEL_DEVICETREE = "k3pro.dtb"
+KERNEL_DEVICETREE = "gxm_q200_k3_pro.dtb"
 
 KERNEL_MODULE_AUTOLOAD += "\
-    se2io_se \
-    ampanel \
-    a5stb \
+    e2_procfs \
     mali \
     rfcomm \
     hidp \
