enable remote control for k1plus k1pro k2pro_s905D k3pro devices

--- a/recipes-bsp/linux/linux-coreelec-3.14.29/k1plus/gxbb_p200_k1_plus.dts
+++ b/recipes-bsp/linux/linux-coreelec-3.14.29/k1plus/gxbb_p200_k1_plus.dts
@@ -61,6 +61,12 @@
 		fe0_ts = <0>;
 		fe0_dev = <0>;
 	};
+	meson-remote {
+		status = "ok";
+	};
+	meson-ir {
+		status = "disabled";
+	};
 };
 
 &i2c_a {
