--- a/recipes-bsp/linux/linux-coreelec-3.14.29/k1pro/gxl_p230_k1_pro.dts
+++ b/recipes-bsp/linux/linux-coreelec-3.14.29/k1pro/gxl_p230_k1_pro.dts
@@ -57,6 +57,12 @@
 		amlogic,clrmask = <0x1 0x38000000 0x3 0x80>;
 		amlogic,pins = "GPIODV_13", "GPIODV_14", "GPIODV_15";
 	};
+	meson-remote {
+		status = "ok";
+	};
+	meson-ir {
+		status = "disabled";
+	};
 
 };
 
