--- a/recipes-bsp/linux/linux-coreelec-3.14.29/k3pro/gxm_q200_k3_pro.dts
+++ b/recipes-bsp/linux/linux-coreelec-3.14.29/k3pro/gxm_q200_k3_pro.dts
@@ -36,6 +36,12 @@
 		fe0_ts = <0>;
 		fe0_dev = <0>;
 	};
+	meson-remote {
+		status = "ok";
+	};
+	meson-ir {
+		status = "disabled";
+	};
 };
 
 &pinmux {
