Use simple names for k2pro and k2prov2

--- a/conf/machine/k2pro.conf
+++ b/conf/machine/k2pro.conf
@@ -1,5 +1,5 @@
 #@TYPE: Machine
-#@NAME: Mecool K2 Pro (S905 soc)
+#@NAME: Mecool K2 Pro (S905 SoC)
 #@DESCRIPTION: Machine configuration for the Mecool K2 Pro (Old version)
 
 SOC_FAMILY = "AML905"
