--- a/conf/machine/k2prov2.conf
+++ b/conf/machine/k2prov2.conf
@@ -1,5 +1,5 @@
 #@TYPE: Machine
-#@NAME: Mecool K2 Pro (S905D soc)
+#@NAME: Mecool K2 Pro (S905D SoC)
 #@DESCRIPTION: Machine configuration for the Mecool K2 Pro (New version)
 
 SOC_FAMILY = "AML905D"
