--- a/conf/machine/odroidc2.conf
+++ b/conf/machine/odroidc2.conf
@@ -14,15 +14,13 @@ require conf/machine/include/arm/arch-armv8.inc
 DVBPROVIDER = "kernel"
 DVBSKYPROVIDER = "kernel"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
     hardkernel-mali-${MACHINE} \
     ${@bb.utils.contains('GST_VERSION', '1.0', 'gst-amlavsink1 ', 'gst-amlavsink gst-amlavout  gst-ffmpeg gst-fluendo-mpegdemux ', d)} \
-    \
-     \
     opengl-amlogic \
     "
 
-MACHINE_EXTRA_RRECOMMENDS = " \
+MACHINE_EXTRA_RRECOMMENDS += "\
     libamplayer \
     libamavutils \
     libamadec \
@@ -49,7 +47,7 @@ KERNEL_MODULE_AUTOLOAD += "\
 module_conf_dhd = "options dhd firmware_path=/lib/firmware/brcm/ nvram_path=/lib/firmware/brcm/"
 
 KERNEL_MODULE_PROBECONF += "\
-	dhd \
+    dhd \
 "
 
 EXTRA_IMAGEDEPENDS += "u-boot-hardkernel"
@@ -58,7 +56,7 @@ SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext4"
 IMAGE_FSTYPES ?= "ext4 sdcard"
 IMAGEDIR ?= "${MACHINE}"
 
-IMAGE_CMD_sdcard_append  = " \
+IMAGE_CMD_sdcard_append  = "\
     mkdir -p ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}; \
     mv ${SDIMG} ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}; \
     echo ${IMAGE_VER_STRING} > ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}/imageversion; \
