--- a/conf/machine/x8hp.conf
+++ b/conf/machine/x8hp.conf
@@ -11,7 +11,7 @@ require conf/machine/include/amlogic.inc
 
 IMAGE_CLASSES += "image_types_minix"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
     gst-amlavsink \
     gst-app \
     gst-amlavout \
@@ -21,7 +21,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "\
 
 DVBPROVIDER = "kernel"
 
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "\
     kernel-module-cdfs \
     kernel-module-stb-procfs \
     kernel-module-stb-nimsockets \
@@ -38,7 +38,7 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
     firmware-ap6330 \
     "
 
-MACHINE_EXTRA_RRECOMMENDS = " \
+MACHINE_EXTRA_RRECOMMENDS += "\
     libamplayer \
     libamavutils \
     libamadec \
@@ -94,7 +94,7 @@ UBOOT_LOADADDRESS = "0x80008000"
 
 IMAGEDIR ?= "${MACHINE}"
 
-IMAGE_CMD_sdcard_append = " \
+IMAGE_CMD_sdcard_append = "\
     mkdir -p ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}; \
     mv ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.minix-sd.img ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}/${IMAGE_NAME}.sdcard.img; \
     echo ${IMAGE_VER_STRING} > ${DEPLOY_DIR_IMAGE}/${IMAGEDIR}/imageversion; \
